# OasisLMF

./: .dockerignore  .gitignore  AUTHORS  CHANGELOG.rst  CONTRIBUTING.md  DOCS_STRATEGY.md  Direct.csv  Dockerfile  FmTesting.ipynb  LICENSE  MANIFEST.in  MIGRATION_PLAN.md  Makefile  README.md  README.rst  SECURITY.md  _write_csv_cython.pyx  benchmark_write_csv.py  benchmark_write_csv.py.lprof  calc_rules.xlsx  calc_rules_unsupported.xlsx  codecov.yml  colab_FmTesting.ipynb  conftest.py  data_config.json  index.ipynb  mdk-builtin-lookup.rst  model-storage.md  oed_transform_spec.xlsx  optional-package.in  outcome.csv  output.csv  package_runtime_tester.py  pyproject.toml  pyrightconfig.json  reference_run_ktools.sh  requirements-package.in  requirements-package.txt  requirements.in  requirements.txt  (+6 more)
.github/: ISSUE_TEMPLATE.md  PULL_REQUEST_TEMPLATE.md
.github/workflows/: build-and-deploy-docs copy.yml  build-and-deploy-docs.yml  build-docs.yml  build-extra-wheels.yml  build-schema.yml  build.yml  code-quality.yml  format-checks.yml  notify.yml  oasislmf-unittest.yml  piwind-mdk.yml  piwind-results.yml  piwind-test-v1.yml  piwind-test-v2.yml  piwind-test.yml  piwind-test_plat1.yml  piwind-test_plat2.yml  project-PR.yml  project-issue.yml  publish.yml  release-br-ver.yml  release-pr.yml  test-linux.yml  test-macos.yml  test-windows.yml  unittest.yml  version.yml
binder/: index.ipynb  requirements.txt
cython_stubs/: oasis_writecsv.pyi
docker/: Dockerfile.FmTestingNotebook  Dockerfile.oasislmf_benchmark  Dockerfile.oasislmf_runner  Dockerfile.oasislmf_tester  entrypoint_benchmark.py  entrypoint_tester.sh
docs/: DOCS_AUTHORING_PROMPT.md  Makefile  OED_currency_support.md  OED_financial_terms_supported.xlsx  OED_validation_guidelines.md  README.md  build.sh  correlation_methodology.md  fm_architecture.md  installation_for_mac.md  oed_transform_spec.xlsx  prepare-docs.py
docs/source/: building-and-running-models.rst  cli.rst  conf.py  environment-variables.rst  generated_options.rst  index.rst  installation.rst  logging-configuration.rst  modules.rst  options.rst  options_config_file.rst  sphinx.rst
fm_testing_tool/: Dockerfile.FmTestingNotebook  FmTesting.ipynb  docker-compose.yml  functions.py  postBuild  requirements.in  requirements.txt  run.sh  set_jupyter_password.py  startup.sh  widgets.py
jenkins/: oasislmf.groovy  performance_check.groovy
oasislmf/: __init__.py  il_inputs.py  manager.py  warmup.py
oasislmf/_data/: Dockerfile.model_api_tester  MappingMapToOED_CanLocA.xslt  MappingMapToOED_piwind_modelloc.xslt  acc_dtypes.json  action_tree.p  analysis_settings.json  calc-rules-profile.json  calc-rules.csv  calc_rules.csv  calc_rules.xlsx  calc_rules_direct.csv  calc_rules_direct_layer.csv  calc_rules_profile.json  calc_rules_step.csv  config_compatibility_profile.json  cookiecutter.json  default_acc_profile.json  default_combined_exposure_profile.json  default_fm_agg_profile.json  default_fm_profile_field_values.json  default_il_inputs_values.json  default_loc_profile.json  default_peril_groups.json  default_perils.json  default_step_policies_profile.json  default_unified_profile.json  fm-oed-agg-profile.json  info_dtypes.json  loc_dtypes.json  oed-acc-profile.json  oed-loc-profile.json  quantile.csv  scope_dtypes.json
oasislmf/api/: client.py  session.py
oasislmf/api_client/: client.py  client_manager.py  session_manager.py
oasislmf/cli/: admin.py  api.py  base.py  bin.py  cleaners.py  clearcache.py  command.py  computation_command.py  config.py  exposure.py  inputs.py  model.py  root.py  test.py  version.py  warmup.py
oasislmf/cmd/: __init__.py  api.py  base.py  bin.py  cleaners.py  config.py  model.py  root.py  test.py  version.py
oasislmf/computation/: base.py
oasislmf/data_layer/: cdftocsv.py  complex_items_to_bin.py  correlationtobin.py  dfcompare.py  footprintconv.py  vulnerability.py
oasislmf/execution/: bash.py  bin.py  complex_items_to_bin.py  complex_items_to_csv.py  conf.py  files.py  load_balancer.py  resource_monitor.py  runner.py
oasislmf/exposures/: common.py  csv_trans.py  manager.py  oed.py  pipeline.py  reinsurance_layer.py
oasislmf/gen_test_data/: gen_data_and_run_ktools.sh  generate_test_data.py
oasislmf/keys/: lookup.py
oasislmf/lookup/: base.py  builtin.py  factory.py  interface.py  keys_output.py  rtree.py
oasislmf/model_execution/: bash.py  bin.py  complex_items_to_bin.py  complex_items_to_csv.py  conf.py  files.py  runner.py
oasislmf/model_preparation/: computation_step.py  exposure_pre_analysis.py  gul_inputs.py  il_inputs.py  il_inputs_new.py  lookup.py  manager.py  oed.py  pipeline.py  reinsurance_layer.py  ri_inputs.py  sum_inputs.py  summaries.py  untitled.py  utils.py
oasislmf/model_testing/: validation.py
oasislmf/models/: __init__.py  lookup-config.json  model-lookup-config.json  model.py
oasislmf/platform/: client.py  session.py
oasislmf/platform_api/: client.py  session.py
oasislmf/preparation/: correlations.py  dir_inputs.py  gul_imputs_old.py  gul_inputs.py  il_inputs.py  lookup.py  oed.py  reinsurance_layer.py  summaries.py
oasislmf/pytools/: FM_computation_data_structure.odg  cdftocsv.py  common.py  compare_bin.py  correlationtobin.py  correlationtocsv.py  dfcompare.py  fm_architecture.md  fmpy.py  footprintconv.py  get_model.py  gulpy.py  indexconvert.py  introducing_gulmc.md  introducing_gulpy.md  manager.py  modelpy.py  ping.py  plapy.py  utils.py
oasislmf/schema/: analysis_settings.json  (+2 more)
rdls/: rdls_schema.json
schemas/: analysis_settings.json  example_model_settings.json  model_settings.json
scripts/: check_default_perils.py  check_default_profile.py  run_model.py  runtests.sh  validate_install.py
tests/: conftest.py  data.py  fm_coverage.py
validation/: combine.py  deterministic-loss.py  deterministic_loss.py  fm12.txt  fm4.txt  fm40.txt  fm41.txt  fm5.txt  fm6.txt  fm7.txt  fm_coverage.py  insurance_account_test_case_list.xlsx  insurance_conditions_test_case_list.xlsx  policy_coverage_test_case_list.xlsx  reinsurance_test_case_list.xlsx  reorder_csv_columns.py  split.py
(+14216 files in other folders)
