[wheel]
universal = 1

[metadata]
description-file = README.md

[tool:pytest]
exclude = .tox,.git,*/migrations/*,*/static/CACHE/*,docs,.ropeproject
python_classes =

[flake8]
exclude = .tox,.git,*/migrations/*,*/static/CACHE/*,docs,.ropeproject,.hypothesis
max-line-length = 150
ignore = E501,E402

[coverage:run]
branch = true

[coverage:report]
show_missing = true
